intel/bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/log.txt
bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main.c:23:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register RC4_INT *d;
    ^~~~~~~~~
bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main.c:24:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register RC4_INT x, y, tx, ty;
    ^~~~~~~~~
bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main.c:24:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register RC4_INT x, y, tx, ty;
    ^~~~~~~~~
bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main.c:24:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register RC4_INT x, y, tx, ty;
    ^~~~~~~~~
bench_214_work/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main/extr_.opensslcryptorc4rc4_enc.c_RC4_with_main.c:24:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register RC4_INT x, y, tx, ty;
    ^~~~~~~~~
5 warnings and 1 error generated.
HLS FPGA Parse FAILED.
